--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -503,6 +503,9 @@ header {
   // @media (max-width: #{$xlll}) {
   //   height: auto;
   // }
+  &.partner{
+    height: auto;
+  }
   @media (max-width: #{$med}) {
     width: 100%;
     position: fixed;
@@ -5557,5 +5560,354 @@ gap: 28px;
              }
       }
     }
+  }
+}
+// --------------------partner event\
+.prtner-tab{
+  margin-bottom: 200px;
+  .nav{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0 !important;
+  }
+  .nav-item{
+    .nav-link{
+      background-color: #958A86;
+      border-radius: 
+      29px 29px 0px 0px;
+      padding: 14px 94px;
+      color: $white-color;
+      &.active{
+        background-color: #F6774E;
+      }
+      @media (max-width: #{$xl}) {
+        padding: 14px 54px;
+            }
+      @media (max-width: #{$sm}) {
+        padding: 10px 14px;
+        font-size: 14px;
+            }
+      @media (max-width: #{$xs}) {
+        padding: 10px 12px;
+        font-size: 12px;
+            }
+      @media (max-width: #{$xss}) {
+        padding: 8px 8px;
+        font-size: 10px;
+            }
+    }
+  }
+  .tab-content{
+    box-shadow: 0 0 6px 0 
+    rgba(0, 0, 0, 0.25);
+    border-radius: 29px;
+    padding: 30px 46px 30px 37px;
+    @media (max-width: #{$sm}) {
+      padding: 30px 30px 30px 30px;
+      }
+    .tab-one-data{
+      .required{
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 22px;
+        color: 
+        #CB4444;
+        margin-bottom: 18px;
+      }
+      .data-list{
+        form{
+          margin-bottom: 25px;
+          .list-div{
+            display: flex;
+            gap: 10px;
+            margin-bottom: 18px;
+            align-items: center;
+            @media (max-width: #{$sm}) {
+              flex-direction: column;
+              align-items: start;
+              }
+            &:first-child{
+              margin-bottom: 15px;
+            }
+            &:nth-child(3){
+              margin-bottom: 22px;
+            }
+            .form-label{
+              color: #F6774E ;
+              font-size: 16px ;
+              font-weight: 700;
+              line-height: 22px;
+              width: 160px;
+              margin-bottom: 0;
+              @media (max-width: #{$xl}) {
+               width: 178px;
+                 
+                    }
+              span{
+                color: 
+        #CB4444;
+              }
+            }
+            .form-control{
+              border:  1px solid 
+              #555555 !important; 
+              border-radius: 10px;
+              padding: 10px 18px ;
+              height: 39px;
+              &::placeholder{
+                color: 
+                #BFBFBF;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 22px;
+              }
+            }
+            h3{
+              color: #343434;
+              font-size: 16px ;
+              font-weight: 500;
+              line-height: 22px;
+              width: 100%;
+              margin-bottom: 0;
+            }
+            .wdth-checkbox{
+              @media (max-width: #{$xl}) {
+                width: 100%;
+                    }
+            }
+            .check-box{
+
+              display: flex;
+              gap: 65px;
+              @media (max-width: #{$xl}) {
+                flex-wrap: wrap;
+                 gap: 10px;
+                    }
+              .form-check-input{
+                border-color: #555555;
+              }
+              .form-check-input:checked{
+                background-color: 
+                #2DAFF5;
+              }
+            }
+            .form-check-label{
+              font-size: 16px ;
+              font-weight: 500;
+              line-height: 22px;
+            }
+            .form-check-input:focus{
+              box-shadow: none;
+            }
+          &.list-radio{
+          align-items: start;
+          margin-bottom: 38px;
+          .price{
+            display: flex;
+            gap: 23px;
+            margin-top: 18px;
+            align-items: center;
+            .form-label{
+              color: #343434;
+              font-size: 16px;
+              line-height: 22px;
+              font-weight: 500;
+              width: auto;
+            }
+          }
+          }
+          }
+        }
+      }
+    }
+  }
+}
+
+.btm-data{
+  .btn-title{
+    color: #AB2210;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22px;
+    margin-bottom: 15px;
+  }
+  .btm-content{
+    background-color: 
+    #FDFAF8;
+    padding: 37px 117px 36px 51px;
+    border-radius: 20px;
+    @media (max-width: #{$sm}) {
+      padding: 37px 30px 36px 30px;
+      }
+    form{
+      .list-div{
+        display: flex;
+        gap: 27px;
+        margin-bottom: 12px;
+        align-items: center;
+        @media (max-width: #{$xl}) {
+          flex-direction: column;
+           align-items: start;
+           gap: 0;
+              }
+        &.bottom-text{
+          margin-bottom: 41px;
+        }
+        .form-label{
+          width: 100px;
+          color: 
+          #AB2210;
+          font-size: 16px;
+          font-weight: 700;
+          line-height: 22px;
+        }
+        .date-div{
+          display: flex ;
+          gap: 23px;
+          width: 100%;
+          align-items: center;
+          @media (max-width: #{$sm}) {
+            flex-direction: column;
+            align-items: start;
+            }
+          .form-control{
+            border: 1px solid 
+            #555555;
+            border-radius: 10px;
+            width: 100%;
+            max-width: 240px;
+            &::placeholder{
+              color: 
+              #BFBFBF;
+              font-weight: 500;
+              font-size: 16px;
+              line-height: 22px;
+            }
+          }
+          .form-check-input{
+            border: 1px solid #555555;
+            &:focus{
+              box-shadow: none;
+            }
+          }
+          .form-check-label{
+            font-size: 16px;
+            font-weight: 500;
+            color: 
+            #343434;
+            line-height: 22px;
+          }
+        }
+        .date-input{
+          width: 100%;
+          .form-control{
+            border: 1px solid #555555;
+            height: 39px;
+            &::placeholder{
+              color: #BFBFBF;
+              font-size: 16px;
+            font-weight: 500;
+            line-height: 22px;
+            }
+          }
+        }
+        .form-check-input{
+          border: 1px solid #555555;
+          &:focus{
+            box-shadow: none;
+          }
+        }.form-check{
+          width: 100%;
+          .form-check-label{
+            font-size: 16px;
+            font-weight: 500;
+            color: 
+            #343434;
+            line-height: 22px;
+        }
+        }
+      }
+      .form-btn{
+        display: flex;
+        justify-content: center;
+        gap: 32px;
+        @media (max-width: #{$sm}) {
+          flex-direction: column;
+          align-items: start;
+          gap: 10px;
+          align-items: center;
+          }
+        .btn{
+          color: $white-color;
+          padding: 9px 24px;
+          font-size: 20px;
+          font-weight: 700;
+          line-height: 27px;
+          background-color: 
+          #79311A;
+          border-radius: 10px;
+          @media (max-width: #{$sm}) {
+            font-size: 16px;
+          line-height: 20px;
+            }
+        }
+      }
+    }
+  }
+}
+.form-control:focus{
+  box-shadow: none;
+}
+.multipleChosen {
+  width: 100%;
+  border:  1px solid 
+  #555555 !important; 
+  border-radius: 10px;
+  padding: 10px 18px ;
+  height: 39px;
+
+}
+.chosen-container-multi .chosen-choices{
+  width: 100%;
+  border:  1px solid 
+  #555555 !important; 
+  border-radius: 10px;
+  padding: 3px 18px ;
+  height: 39px !important;
+  box-shadow: none;
+
+}
+.chosen-container {
+  width: 100% !important; 
+}
+.chosen-container-active .chosen-choices{
+  box-shadow: none;
+}
+.chosen-container-multi .chosen-choices li.search-choice{
+  border: 1px solid 
+  #969696;
+  color: #020202;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  padding: 3px 3px 3px 30px;
+  background-color: #DDDDDD;
+
+}
+.chosen-container-multi .chosen-choices li.search-choice .search-choice-close{
+  left: 4px;
+  top: 7px;
+  
+}
+.search-choice span{
+  position: relative;
+  &::after{
+    position: absolute;
+    content: "";
+    left: -7px;
+    top: -3px;
+    background-color: #969696;
+    width: 1px;
+    height: 22px;
   }
 }
