--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6361,12 +6361,13 @@ button:focus:not(:focus-visible) {
   box-shadow: none;
 }
 
-.multipleChosen {
-  width: 100%;
+.select2-container {
+  width: 100% !important;
+}
+
+.select2-container--default .select2-selection--multiple {
   border: 1px solid #555555 !important;
   border-radius: 10px;
-  padding: 10px 18px;
-  height: 39px;
 }
 
 .chosen-container-multi .chosen-choices {
