--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5870,13 +5870,12 @@ gap: 28px;
 .form-control:focus{
   box-shadow: none;
 }
-.multipleChosen {
-  width: 100%;
-  border:  1px solid 
-  #555555 !important; 
+.select2-container{
+  width: 100%  !important;
+}
+.select2-container--default .select2-selection--multiple{
+  border: 1px solid #555555 !important;
   border-radius: 10px;
-  padding: 10px 18px ;
-  height: 39px;
 }
 .chosen-container-multi .chosen-choices{
   width: 100%;
